Add base python server and cpp networking

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -26,6 +26,7 @@ set(RUNTIME_SOURCE
         external/discord_jak1.cpp
         external/discord_jak2.cpp
         external/discord.cpp
+        multiplayer.cpp
         graphics/display.cpp
         graphics/gfx_test.cpp
         graphics/gfx.cpp
